--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,5 +34,11 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
 
+//    design
+    compile 'com.android.support:design:25.3.1'
+
+//      viewpagerIndicator
+    compile 'com.github.hackware1993:MagicIndicator:1.5.0'
+
 
 }
