--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,6 @@ dependencies {
     compile 'com.github.hackware1993:MagicIndicator:1.5.0'
 
 
+    compile 'se.emilsjolander:stickylistheaders:2.7.0'
+
 }
