首页商品分列展示修复以及聊天界面实现

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
         <activity android:name=".ui.activity.LoginActivity"/>
         <activity android:name=".ui.activity.AccountSetting"/>
         <activity android:name=".ui.activity.CalendarActivity"/>
+        <activity android:name=".ui.activity.SecKillActivity"/>
+        <activity android:name=".ui.activity.CustomServiceActivity"/>
     </application>
 
 </manifest>
