--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,10 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
 
 
+    //rxjava
+    //compile 'io.reactivex:rxandroid:1.2.1'
+
+
 
 
 
