--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.young.jdmall">
-
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <application
+        android:name=".app.JDMallApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -18,12 +19,15 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.activity.LoginActivity"/>
-        <activity android:name=".ui.activity.AccountSetting"/>
+        <activity android:name=".ui.activity.AccountSettingActivity"/>
         <activity android:name=".ui.activity.CalendarActivity"/>
         <activity android:name=".ui.activity.SecKillActivity"/>
         <activity android:name=".ui.activity.CustomServiceActivity"/>
         <activity android:name=".ui.activity.MessageActivity"/>
         <activity android:name=".ui.activity.OrderActivity"/>
+        <activity android:name=".ui.activity.RegistActivity"/>
+        <activity android:name=".ui.activity.AddRecepitAddressActivity"/>
+        <activity android:name=".ui.activity.RecepitAddressActivity"/>
     </application>
 
 </manifest>
