分类页面填充网络数据完成

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,10 @@ dependencies {
     compile 'com.trello.rxlifecycle2:rxlifecycle-components:2.1.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
 
+    compile 'jp.wasabeef:glide-transformations:2.0.2'
+    // If you want to use the GPU Filters
+    compile 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.4.1'
+
 
 
 
