订单界面实现

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,9 @@
         <activity android:name=".ui.activity.CalendarActivity"/>
         <activity android:name=".ui.activity.SecKillActivity"/>
         <activity android:name=".ui.activity.CustomServiceActivity"/>
+        <activity android:name=".ui.activity.OrderActivity">
+
+        </activity>
     </application>
 
 </manifest>
