--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.young.jdmall">
+
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
@@ -31,11 +32,12 @@
         <activity android:name=".ui.activity.MainActivity"/>
         <activity android:name=".ui.activity.HongBaoActivity"/>
         <activity android:name=".ui.activity.FillingOrderActivity"/>
-
         <activity android:name=".ui.activity.RegistActivity"/>
         <activity android:name=".ui.activity.AddRecepitAddressActivity"/>
         <activity android:name=".ui.activity.RecepitAddressActivity"/>
         <activity android:name=".ui.activity.NewsDetailActivity">
+        </activity>
+        <activity android:name=".ui.activity.ServiceWindowActivity">
         </activity>
     </application>
 
