--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,10 @@ dependencies {
     compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
     compile 'com.trello.rxlifecycle2:rxlifecycle-components:2.1.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    //详情页
+    compile 'com.facebook.fresco:fresco:0.9.0'
+    compile 'com.gxz.pagerslidingtabstrip:library:1.3'
+    compile 'com.bigkoo:convenientbanner:2.0.5'
 
 
 }
