--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:name=".app.JDMallApplication"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -26,6 +27,7 @@
         <activity android:name=".ui.activity.OrderActivity">
 
         </activity>
+        <activity android:name=".ui.activity.ProductDetaiActivity"/>
     </application>
 
 </manifest>
