新增FlowLayout 用于实现热搜布局 新增 SearchActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,8 @@
         </activity>
         <activity android:name=".ui.activity.ServiceWindowActivity">
         </activity>
+        <activity android:name=".ui.activity.SearchActivity">
+        </activity>
     </application>
 
 </manifest>
