--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,10 @@ dependencies {
 
 
 
+    //详情页
+    compile 'com.facebook.fresco:fresco:0.9.0'
+    compile 'com.gxz.pagerslidingtabstrip:library:1.3'
+    compile 'com.bigkoo:convenientbanner:2.0.5'
 
 
 
