--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,10 +39,10 @@
         </activity>
         <activity android:name=".ui.activity.ServiceWindowActivity">
         </activity>
-        <activity android:name=".ui.activity.OrderActivity">
+        <activity android:name=".ui.activity.OrderActivity"/>
 
-        </activity>
         <activity android:name=".ui.activity.ProductDetaiActivity"/>
+        <activity android:name=".ui.activity.InfoActivity"/>
     </application>
 
 </manifest>
