--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
         <activity android:name=".ui.activity.OrderActivity"/>
         <activity android:name=".ui.activity.TypeListActivity"/>
         <activity android:name=".ui.activity.TypeActivity"
-                  android:launchMode="singleInstance"/>
+                  android:launchMode="singleTask"/>
         <activity android:name=".ui.activity.MainActivity"/>
         <activity android:name=".ui.activity.HongBaoActivity"/>
         <activity android:name=".ui.activity.FillingOrderActivity"/>
@@ -48,7 +48,7 @@
         <activity android:name=".ui.activity.CollectionActivity"/>
         <activity android:name=".ui.activity.HelpCenterActivity"/>
         <activity android:name=".ui.activity.SearchActivity"
-                  android:launchMode="singleInstance">
+                  android:launchMode="singleTask">
         </activity>
         <activity android:name=".ui.activity.InfoActivity"/>
     </application>
