--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,7 @@ dependencies {
 
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.jude:easyrecyclerview:4.2.3'
+    compile 'com.android.volley:volley:1.0.0'
 
 
 }
