粗略完成支付成功页面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,7 @@
         <activity android:name=".ui.activity.RecepitAddressActivity"/>
         <activity android:name=".ui.activity.NewsDetailActivity">
         </activity>
+        <activity android:name=".ui.activity.SubmitSuccessActivity"/>
         <activity android:name=".ui.activity.ServiceWindowActivity"/>
 
         <activity android:name=".ui.activity.ProductDetaiActivity"/>
