--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,12 +23,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-
-
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.7.0'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
@@ -40,7 +38,7 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.7.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.7.0'
     compile 'com.github.hackware1993:MagicIndicator:1.5.0'
-//    retrofit
+    //    retrofit
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
     compile 'io.reactivex.rxjava2:rxjava:2.1.1'
@@ -53,22 +51,16 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.7.0'
     // If you want to use the GPU Filters
     compile 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.4.1'
-
-
     //三级联动
     compile 'com.github.open-android:CityPickerWebView:0.1.0'
-
     //详情页
     compile 'com.facebook.fresco:fresco:0.9.0'
     compile 'com.gxz.pagerslidingtabstrip:library:1.3'
     compile 'com.bigkoo:convenientbanner:2.0.5'
     //GreenDao3依赖
     compile 'org.greenrobot:greendao:3.2.2'
-
-
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.jude:easyrecyclerview:4.2.3'
     compile 'com.android.volley:volley:1.0.0'
-
-
+    compile project(':libzxing')
 }
