列表按钮调大小

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,10 +39,9 @@
         </activity>
         <activity android:name=".ui.activity.ServiceWindowActivity">
         </activity>
-        <activity android:name=".ui.activity.OrderActivity">
         <activity android:name=".ui.activity.SubmitSuccessActivity"/>
 
-        </activity>
+        <activity android:name=".ui.activity.OrderActivity"/>
         <activity android:name=".ui.activity.ProductDetaiActivity"/>
 
         <activity android:name=".ui.activity.CollectionActivity"/>
